fix(update-overview) only set overflow when hiding

--- a/components/update-overview/update-overview.less
+++ b/components/update-overview/update-overview.less
@@ -8,26 +8,23 @@
     display: block;
   }
 
-  .updates-highlights {
-    overflow-y: hidden;
-  }
-
   .highlights--show .updates-highlights {
-    opacity: 1;
+    max-height: 1080px;
     transition-property: opacity, max-height;
     transition-duration: .25s, .25s;
-    transition-delay: .25s, 0s;
     transition-timing-function: ease-in-out, ease-in-out;
-    max-height: 1080px;
+    transition-delay: .25s, 0s;
+    opacity: 1;
   }
 
   .highlights--hidden .updates-highlights {
-    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
     transition-property: opacity, max-height;
     transition-duration: .25s, .25s;
-    transition-delay: 0s, .25s;
     transition-timing-function: ease-in-out, ease-in-out;
-    max-height: 0;
+    transition-delay: 0s, .25s;
+    opacity: 0;
   }
 
   .update-extract-small {
